added examples for parallel streams